--- a/config/config.json
+++ b/config/config.json
@@ -15,9 +15,10 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "password": "bAGhb26D-b2Fc5df4--11aCeHCHhHa-C",
+    "database": "railway",
+    "host": "roundhouse.proxy.rlwy.net",
+    "dialect": "mysql",
+    "port": "32030"
   }
 }
